About page complete

--- a/about.html
+++ b/about.html
@@ -107,51 +107,69 @@
             </header>
         </div>
 
-        <section class="about_one mt-20">
+
+        <section class="product-one">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6">
-                        <div class="about1_img">
-                            <div class="about1_shape_1"></div>
-                            <img src="assets/images/about/about-1-img-1.jpg" alt="About-Img" style="width: 450px; height: 573px; object-fit: cover;">
-                            <div class="about1_icon-box">
-                                <div class="circle">
-                                    <span class="icon-focus"></span>
-                                </div>
-                            </div>
-                            <div class="about_img_2">
-                                <img src="assets/images/about/about-1-img-2.jpg" alt="" style="width: 370px; height: 276px; object-fit: cover;">
+                        <div class="product_img">
+                            <img src="assets/images/resources/product-1-img-1.jpg" class="w-[580px] h-[663px] object-cover" alt="Product One Img">
+                            <div class="experience_box z-10">
+                                <h2 class="w-[200px]">Growing with Care,</h2>
+                                <p>Serving with Pride</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6">
-                        <div class="block-title text-left">
-                            <p>ABOUT EARTH ASIA AGRO</p>
-                            <h3>YOUR TRUSTED PARTNER IN BEEF, MILK & LIVESTOCK SUPPLY</h3>
-                            <div class="leaf">
-                                <img src="assets/images/resources/leaf.png" alt="">
+                        <div class="growing_product p-5 h-auto">
+                            <div class="block-title text-left">
+                                <h3>Our Story</h3>
+                                <div class="leaf">
+                                    <img src="assets/images/resources/leaf.png" alt="">
+                                </div>
+                            </div>
+                            <div class="growing_product_text">
+                                <p>At Earth Asia Agro, we believe that food should be fresh, natural, and trustworthy. Established on December 10, 2024, we are an agro-based livestock and cattle farm located in Abdar Bidhai, Kaoraid Union, Sreepur, Gazipur, Bangladesh. <br> <br>
+
+                                Our farm is dedicated to producing premium quality beef, raw cow milk, dairy products, farm-fresh eggs, and agricultural products. Every product we offer is raised and produced with care, responsibility, and a commitment to quality. We bring wholesome, farm-direct goodness straight to your family's table. <br> <br>
+
+                                With a focus on ethical practices, natural farming, and hygienic processing, Earth Asia Agro stands for purity, freshness, and trust.</p>
                             </div>
                         </div>
-                        <div class="about_content">
-                            <div class="text">
-                                <p>Earth Asia Agro is an agro based livestock cattle farm locating in Kaoraid Union, Mawna, Sreepur, Gazipur. We mostly produce premium quality beef meat, raw cow milk, dairy products, egg (Layer) and agri products.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="service_one bg-gray-50">
+            <div class="container">
+                <div class="block-title text-center pt-5 sm:pt-0">
+                    <p>Our Vision & Mission</p>
+                    <h3>Building a Sustainable Future</h3>
+                    <div class="leaf " style="text-align: center;">
+                        <img src="assets/images/resources/leaf.png" alt="" style="margin: 0 auto;">
+                    </div>
+                </div>
+                <div class="row d-flex">
+                    <div class="col-xl-6 col-lg-6 col-md-12 d-flex">
+                        <div class="service_1_single wow fadeInUp h-100 d-flex flex-column">
+                            <div class="content flex-grow-1">
+                                <h3>Our Vision</h3>
+                                <p>To become a trusted leader in Bangladesh's agricultural sector by providing fresh, high-quality, and responsibly sourced farm products for every household. We envision a future where people choose farm-direct, natural food for a healthier life.</p>
                             </div>
-                            <div class="about1_icon_wrap">
-                                <div class="about1_icon_single">
-                                    <div class="about1_icon">
-                                        <span class="icon"> <img src="assets/images//icon/beeficon.png" alt="Beef Icon"></span>
-                                    </div>
-                                    <p>Healthy cows, fresh and flavorful beef</p>
-                                </div>
-                                <div class="about1_icon_single">
-                                    <div class="about1_icon">
-                                        <span class="icon"> <img src="assets/images//icon/milkicon.png" alt="Milk Icon"></span>
-                                    </div>
-                                    <p>Experience the taste of real, fresh milk</p>
-                                </div>
-                            </div>
-                            <div class="bottom_text">
-                                <p>We raise our animals with care, deliver fresh products daily, and stay true to our values in every step we take.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-12 d-flex">
+                        <div class="service_1_single wow fadeInUp h-100 d-flex flex-column" data-wow-delay="300ms">
+                            <div class="content flex-grow-1">
+                                <h3>Our Mission</h3>
+                                <ul class="list-unstyled mt-3">
+                                    <li class="mb-2">• To deliver pure, fresh, and nutritious livestock, meat, milk, eggs, and agricultural products directly to consumers.</li>
+                                    <li class="mb-2">• To build a brand rooted in trust, transparency, and sustainability.</li>
+                                    <li class="mb-2">• To practice ethical farming and ensure animal welfare while maintaining the highest hygiene standards.</li>
+                                    <li class="mb-2">• To empower local communities through employment and economic growth.</li>
+                                    <li>• To continuously grow and expand, offering more products and services to meet the evolving needs of our customers.</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -190,75 +208,6 @@
                             <div class="content">
                                 <h3>Customer<br>Focus</h3>
                                 <p>Your satisfaction is our priority. We strive to exceed expectations with every product and service we provide.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="product-one">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-6 col-lg-6">
-                        <div class="product_img">
-                            <img src="assets/images/resources/product-1-img-1.jpg" class="w-[580px] h-[663px] object-cover" alt="Product One Img">
-                            <div class="experience_box z-10">
-                                <h2 class="w-[200px]">Growing with Care,</h2>
-                                <p>Serving with Pride</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6">
-                        <div class="growing_product p-5 h-auto">
-                            <div class="block-title text-left">
-                                <h3>Our Story</h3>
-                                <div class="leaf">
-                                    <img src="assets/images/resources/leaf.png" alt="">
-                                </div>
-                            </div>
-                            <div class="growing_product_text">
-                                <p>At Earth Asia Agro, we believe that food should be fresh, natural, and trustworthy. Established on December 10, 2024, we are an agro-based livestock and cattle farm located in Abdar Bidhai, Kaoraid Union, Sreepur, Gazipur, Bangladesh. <br> <br>
-
-                                Our farm is dedicated to producing premium quality beef, raw cow milk, dairy products, farm-fresh eggs, and agricultural products. Every product we offer is raised and produced with care, responsibility, and a commitment to quality. We bring wholesome, farm-direct goodness straight to your family's table. <br> <br>
-
-                                With a focus on ethical practices, natural farming, and hygienic processing, Earth Asia Agro stands for purity, freshness, and trust.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="service_one bg-gray-50">
-            <div class="container">
-                <div class="block-title text-center">
-                    <p>Our Vision & Mission</p>
-                    <h3>Building a Sustainable Future</h3>
-                    <div class="leaf">
-                        <img src="assets/images/resources/leaf.png" alt="">
-                    </div>
-                </div>
-                <div class="row d-flex">
-                    <div class="col-xl-6 col-lg-6 col-md-12 d-flex">
-                        <div class="service_1_single wow fadeInUp h-100 d-flex flex-column">
-                            <div class="content flex-grow-1">
-                                <h3>Our Vision</h3>
-                                <p>To become a trusted leader in Bangladesh's agricultural sector by providing fresh, high-quality, and responsibly sourced farm products for every household. We envision a future where people choose farm-direct, natural food for a healthier life.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-12 d-flex">
-                        <div class="service_1_single wow fadeInUp h-100 d-flex flex-column" data-wow-delay="300ms">
-                            <div class="content flex-grow-1">
-                                <h3>Our Mission</h3>
-                                <ul class="list-unstyled mt-3">
-                                    <li class="mb-2">• To deliver pure, fresh, and nutritious livestock, meat, milk, eggs, and agricultural products directly to consumers.</li>
-                                    <li class="mb-2">• To build a brand rooted in trust, transparency, and sustainability.</li>
-                                    <li class="mb-2">• To practice ethical farming and ensure animal welfare while maintaining the highest hygiene standards.</li>
-                                    <li class="mb-2">• To empower local communities through employment and economic growth.</li>
-                                    <li>• To continuously grow and expand, offering more products and services to meet the evolving needs of our customers.</li>
-                                </ul>
                             </div>
                         </div>
                     </div>
