Contact us page also complete

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
             </header>
         </div>
 
-        <section class="contact-one mt-20">
+        <section class="contact-one my-20">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-7">
@@ -163,14 +163,14 @@
                             <div class="block-title text-center">
                                 <p>get in touch with us</p>
                                 <h3>Have question?</h3>
-                                <div class="leaf">
-                                    <img src="assets/images/resources/leaf.png" alt="">
+                                <div class="leaf flex justify-center items-center mt-2 sm:mt-0">
+                                    <img src="assets/images/resources/featured-leaf.png" alt="">
                                 </div>
                             </div>
                             <div class="have_questions_text">
-                                <p>There are many variations of passages available but the majority have suffered
-                                    alteration in some form by inject humour or donec vel erat sollicitudin, dapibus dui
-                                    at, porttitor sem.</p>
+                                <p>Whether you're curious about our products, need help placing an order, or just want to learn more about our farm, we're always happy to hear from you.</p>
+                                <p>Feel free to reach out through Facebook, phone, or email. Our team will respond as quickly as possible with the information and support you need.</p>
+                                <p>Your satisfaction and trust mean everything to us. Let's connect!</p>
                             </div>
                             <div class="have_questions_btn">
                                 <a href="#" class="thm-btn">Learn More</a>
