All link is connected to facebook

--- a/about.html
+++ b/about.html
@@ -276,8 +276,8 @@
                                 <a href="tel:+8801820820878">+880 1820-820878</a><br>
                                 <div class="site-footer__social">
                                     <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
