--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             <div class="service_1_img bg-[#fff] h-[250px]">
                                 <img src="assets/images/service/service-1-img-1.png" class="w-full object-cover" alt="Service Image">
                                 <div class="hover_box">
-                                    <a href="service-detail.html"><span class="icon-left-arrow"></span></a>
+                                    <a href="product.html"><span class="icon-left-arrow"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                             <div class="service_1_img bg-[#fff]">
                                 <img src="assets/images/service/service-1-img-2.jpeg" alt="Service Image">
                                 <div class="hover_box">
-                                    <a href="service-detail.html"><span class="icon-left-arrow"></span></a>
+                                    <a href="product.html"><span class="icon-left-arrow"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -277,7 +277,7 @@
                             <div class="service_1_img bg-[#fff]">
                                 <img src="assets/images/service/service-1-img-3.png" alt="Service Image">
                                 <div class="hover_box">
-                                    <a href="service-detail.html"><span class="icon-left-arrow"></span></a>
+                                    <a href="product.html"><span class="icon-left-arrow"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -291,7 +291,7 @@
                             <div class="service_1_img bg-[#fff]">
                                 <img src="assets/images/service/service-1-img-4.png" alt="Service Image">
                                 <div class="hover_box">
-                                    <a href="service-detail.html"><span class="icon-left-arrow"></span></a>
+                                    <a href="product.html"><span class="icon-left-arrow"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -557,9 +557,8 @@
                                 <a href="tel:+8801820820878">+880 1820-820878</a>
                                 <div class="site-footer__social">
                                     <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/"><i class="fab fa-facebook-square"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                    <a href="#"><i class="fab fa-dribbble"></i></a>
+                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
