All Upddate complete

--- a/about.html
+++ b/about.html
@@ -232,7 +232,8 @@
         </section>
 
         <footer class="site-footer">
-            <div class="site-footer_farm_image"><img src="assets/images/resources/site-footer-farm.png" alt="Farm Image"></div>
+            <div class="site-footer_farm_image"><img src="assets/images/resources/site-footer-farm.png"
+                    alt="Farm Image"></div>
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -243,12 +244,11 @@
                             <div class="footer-widget_about_text">
                                 <p>We raise our animals with care, deliver fresh products daily, and stay true to our values in every step we take</p>
                             </div>
-                            <form>
-                                <div class="footer_input-box">
-                                    <input type="Email" placeholder="Email Address">
-                                    <button type="submit" class="button"><i class="fa fa-check"></i></button>
-                                </div>
-                            </form>
+                            <div class="site-footer__social">
+                                <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=%2B8801820820878&context=AfcqMSgZ7As1S1h7lZ-qWbzcs3x3ZhC513gsExvShnBmvaxZLIxo3rXoGW5w7xZ0BBubmjDfoGzaJ5QhD6e3sln18D1ToNtvzy93QPynWhQuNINeY-wNkPAIA24-KpkmZquEdzEpgaXKrUFrFFJc-lZYIw&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwY2xjawMzsTdleHRuA2FlbQIxMABicmlkETE5VEswSEdNc2toM256TndtAR5QE27VOUi9LOnlTg1YdyN9tcnS13KIz8gKgb7CePTcNg41mkoGOT4kQqAtkA_aem_HihL88Dj9IWL-pg1JWMOGQ" target="_blank"><i class="fab fa-whatsapp" style="font-weight:900; font-size: 1.5em;"></i></a>
+                                <a href="https://maps.app.goo.gl/zai7d7QxWkDAhV2j6" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-6">
@@ -258,13 +258,44 @@
                             </div>
                             <ul class="footer-widget__links-list list-unstyled">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="product.html">Products</a></li>
+                                <li><a href="products.html">Products</a></li>
                                 <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
+                    <!-- <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="footer-widget__column footer-widget__news wow fadeInUp" data-wow-delay="300ms">
+                            <div class="footer-widget__title">
+                                <h3>News</h3>
+                            </div>
+                            <ul class="footer-widget__news list-unstyled">
+                                <li>
+                                    <div class="footer-widget__news_image">
+                                        <img src="assets/images/resources/footer-1-img-1.jpg" alt="">
+                                    </div>
+                                    <div class="footer-widget__news_text">
+                                        <p><a href="news_detail.html"> Learn 10 Best Tips for New Formers</a></p>
+                                    </div>
+                                    <div class="footer-widget__news_date_box">
+                                        <p>30 Oct, 2019</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="footer-widget__news_image">
+                                        <img src="assets/images/resources/footer-1-img-2.jpg" alt="">
+                                    </div>
+                                    <div class="footer-widget__news_text">
+                                        <p><a href="news_detail.html">Farmer Sentiment Darkens Hopes Fade</a></p>
+                                    </div>
+                                    <div class="footer-widget__news_date_box">
+                                        <p>30 Oct, 2019</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> -->
                     <div class="col-xl-3 col-lg-3 col-md-6">
                         <div class="footer-widget__column footer-widget__contact wow fadeInUp" data-wow-delay="400ms">
                             <div class="footer-widget__title">
@@ -273,12 +304,7 @@
                             <div class="footer-widget_contact">
                                 <p>Abdar Bidhai, Kaoraid Union,<br>Sreepur, Gazipur, Bangladesh</p>
                                 <a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a><br>
-                                <a href="tel:+8801820820878">+880 1820-820878</a><br>
-                                <div class="site-footer__social">
-                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-instagram"></i></a>
-                                </div>
+                                <a href="tel:+8801820820878">+880 1820-820878</a>
                             </div>
                         </div>
                     </div>
