--- a/index.html
+++ b/index.html
@@ -493,12 +493,11 @@
                             <div class="footer-widget_about_text">
                                 <p>We raise our animals with care, deliver fresh products daily, and stay true to our values in every step we take</p>
                             </div>
-                            <form>
-                                <div class="footer_input-box">
-                                    <input type="Email" placeholder="Email Address">
-                                    <button type="submit" class="button"><i class="fa fa-check"></i></button>
-                                </div>
-                            </form>
+                            <div class="site-footer__social">
+                                <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=%2B8801820820878&context=AfcqMSgZ7As1S1h7lZ-qWbzcs3x3ZhC513gsExvShnBmvaxZLIxo3rXoGW5w7xZ0BBubmjDfoGzaJ5QhD6e3sln18D1ToNtvzy93QPynWhQuNINeY-wNkPAIA24-KpkmZquEdzEpgaXKrUFrFFJc-lZYIw&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwY2xjawMzsTdleHRuA2FlbQIxMABicmlkETE5VEswSEdNc2toM256TndtAR5QE27VOUi9LOnlTg1YdyN9tcnS13KIz8gKgb7CePTcNg41mkoGOT4kQqAtkA_aem_HihL88Dj9IWL-pg1JWMOGQ" target="_blank"><i class="fab fa-whatsapp" style="font-weight:900; font-size: 1.5em;"></i></a>
+                                <a href="https://maps.app.goo.gl/zai7d7QxWkDAhV2j6" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-6">
@@ -555,11 +554,6 @@
                                 <p>Abdar Bidhai, Kaoraid Union,<br>Sreepur, Gazipur, Bangladesh</p>
                                 <a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a><br>
                                 <a href="tel:+8801820820878">+880 1820-820878</a>
-                                <div class="site-footer__social">
-                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/"><i class="fab fa-facebook-square"></i></a>
-                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-instagram"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
