--- a/gallery.html
+++ b/gallery.html
@@ -65,9 +65,9 @@
                     </div>
                     <div class="topbar-one__right">
                         <div class="topbar-one__social">
-                            <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-facebook-square"></i></a>
-                            <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=%2B8801820820878&context=AfcqMSgZ7As1S1h7lZ-qWbzcs3x3ZhC513gsExvShnBmvaxZLIxo3rXoGW5w7xZ0BBubmjDfoGzaJ5QhD6e3sln18D1ToNtvzy93QPynWhQuNINeY-wNkPAIA24-KpkmZquEdzEpgaXKrUFrFFJc-lZYIw&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwY2xjawMzsTdleHRuA2FlbQIxMABicmlkETE5VEswSEdNc2toM256TndtAR5QE27VOUi9LOnlTg1YdyN9tcnS13KIz8gKgb7CePTcNg41mkoGOT4kQqAtkA_aem_HihL88Dj9IWL-pg1JWMOGQ" target="_blank"><i class="fab fa-whatsapp" style="font-weight:900; font-size: 1.5em;"></i></a>
+                                <a href="https://maps.app.goo.gl/zai7d7QxWkDAhV2j6" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
                         </div>
                     </div>
                 </div>
